# telemetry-platform

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  build_lambda_layer.ps1  lambda_handler.py  local_dev.py  pyproject.toml  requirements.txt
backend/src/: __init__.py  app.py  athena_client.py  backup_athena_client.py  config.py  downsampler.py  models.py
backend/src/routers/: chat.py  messages.py  query.py  sessions.py  signals.py  vehicles.py
backend/src/services/: anomaly_detector.py  anthropic_client.py  chat_tools.py
docs/: architecture.md
edge-agent/: Dockerfile  config-rpi.yaml.example  config.yaml  docker-compose.rpi.yml  pyproject.toml
edge-agent/docs/: BENCH_TEST.md  DBC_GUIDE.md  SAFETY.md  WIRING_GUIDE.md
edge-agent/scripts/: can-diagnostics.sh  download-opendbc.sh  install-service.sh  rpi-setup.sh  start-local-stack.sh  telemetry-agent.service  test-capture.sh
edge-agent/src/: __init__.py  batcher.py  can_reader.py  main.py  offline_buffer.py  uploader.py
edge-agent/tests/: test_batcher.py  test_can_reader.py  test_real_can_vcan.py  test_uploader.py
frontend/: .env.example  DASHBOARD_GUIDE.md  PROGRESS.md  deploy.bat  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  react-plotly.js.d.ts
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/chart/: ChartLegend.tsx  ChartToolbar.tsx  TimeSeriesChart.tsx
frontend/src/components/chat/: ChatAnomalyCard.tsx  ChatChart.tsx  ChatContext.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  (+5 more)
frontend/src/store/: chartStore.ts  selectionStore.ts
frontend/src/utils/: chartHelpers.ts  colors.ts  formatters.ts  timeRanges.ts
infra/: README.md  app.py  cdk.json  check_errors.py  get_account.py  pyproject.toml  requirements.txt  set_aws_env.bat.example  set_aws_env.sh.example  test_api.py  verify_deployment.py
infra/stacks/: __init__.py  telemetry_stack.py
processing/decoder/: decoder_core.py  handler.py  requirements.txt
processing/decoder/tests/: test_decoder_core.py
processing/partition_sync/: handler.py
sample-data/: requirements.txt
sample-data/dbc/: ev_powertrain.dbc
sample-data/scripts/: generate_sample_data.py
scripts/: deploy_backend.bat  deploy_frontend.bat  dev-setup.sh  generate_and_sync.bat  generate_data.bat  install-hooks.sh  run-local.sh  run-tests.sh
(+22 files in other folders)
