[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "can-telemetry-backend"
version = "1.0.0"
description = "FastAPI backend for CAN telemetry platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "boto3>=1.34.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "mangum>=0.17.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "moto[athena]>=5.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
